k8s/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        imagePullPolicy: Always
        image: opentechxdoclabs/smart_hr_system:dashboard-arm64
        ports:
        - containerPort: 8005
      imagePullSecrets:
      - name: docker-registry-secret
