k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        imagePullPolicy: Always
        image: opentechxdoclabs/smart_hr_system:front-end-arm64 # This is the image you built in Minikube
        ports:
        - containerPort: 8006
      imagePullSecrets:
      - name: docker-registry-secret
