k8s/jd-s3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jd-s3
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jd-s3
  template:
    metadata:
      labels:
        app: jd-s3
    spec:
      containers:
      - name: jd-s3
        imagePullPolicy: Always
        image: opentechxdoclabs/smart_hr_system:client-jd-crud-arm64-new
        ports:
        - containerPort: 8001
      imagePullSecrets:
      - name: docker-registry-secret
