k8s/resume-s3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume-s3
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resume-s3
  template:
    metadata:
      labels:
        app: resume-s3
    spec:
      containers:
      - name: resume-s3
        imagePullPolicy: Always
        image: opentechxdoclabs/smart_hr_system:resume-s3-rds-crud-arm64
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: docker-registry-secret
