k8s/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: prod
spec:
  selector:
    app: dashboard
  ports:
  - protocol: TCP
    port: 8005
    targetPort: 8005
  type: ClusterIP # Internal communication within the cluster
