k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: prod
spec:
  selector:
    app: frontend-service
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
      nodePort: 30002
  type: NodePort
