k8s/resume-s3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-s3
  namespace: prod
spec:
  selector:
    app: resume-s3
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30005
  type: NodePort  # Internal communication within the cluster
