k8s/resume-upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume-upload
  namespace: prod
spec:
  selector:
    app: resume-upload
  ports:
  - protocol: TCP
    port: 8003
    targetPort: 8003
  type: ClusterIP # Internal communication within the cluster
