k8s/viewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: viewer
  namespace: prod
spec:
  selector:
    app: viewer
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
      nodePort: 30006
  type: NodePort  # Internal communication within the cluster
