k8s/ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8006
          - path: /api/resume_s3/
            pathType: Prefix
            backend:
              service:
                name: resume-s3
                port:
                  number: 8000
          - path: /api/jd_s3/
            pathType: Prefix
            backend:
              service:
                name: jd-s3
                port:
                  number: 8001
          - path: /api/jd_upload/
            pathType: Prefix
            backend:
              service:
                name: jd-upload
                port:
                  number: 8002
          - path: /api/resume_upload/
            pathType: Prefix
            backend:
              service:
                name: resume-upload
                port:
                  number: 8003
          - path: /api/viewer/
            pathType: Prefix
            backend:
              service:
                name: viewer
                port:
                  number: 8004
          - path: /api/dashboard/
            pathType: Prefix
            backend:
              service:
                name: dashboard
                port:
                  number: 8005
